[Fix] Fixed Grid Header Align & Width

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,4 @@
-.header-center {
-  text-align: center;
-}
-
-.ag-header-cell-text {
-  display: flex;
+.header-center .ag-header-cell-label {
   justify-content: center;
-  align-items: center;
+  text-align: center;
 }
